Fix (Box): Box works correct with images
Besides background-image fix, there're changed border-radius and padding from 1rem to 1.5rem

--- a/src/components/Box/Box.module.scss
+++ b/src/components/Box/Box.module.scss
@@ -3,11 +3,17 @@
 .box {
     display: flex;
     flex-direction: column;
-    align-content: center;
-    justify-content: flex-start;
+    align-items: center;
+    justify-content: center;
     
-    padding: 1rem;
-    border-radius: 1rem;
+    padding: 1.5rem;
+    border-radius: 1.5rem;
     background-color: color-mix(in srgb, $color-grey-900 50%, $color-black 50%);
-    backdrop-filter: brightness(50%);
+
+    &.bg-img {
+        background-position: center 25%;
+        background-size: cover;
+        max-width: 100%;
+        min-height: 1fr;
+    }
 }
