--- a/src/components/Button/Button.module.scss
+++ b/src/components/Button/Button.module.scss
@@ -66,7 +66,6 @@
         $bg-act-color: $color-cyan-700 !important;
         $fg-act-color: $color-white !important;
     }
-    
 
     transition: all .125s ease;
     will-change: transform;
@@ -281,7 +280,7 @@
     }
 
     &.fullwidth {
-        width: 100%
+        width: 100%;
     }
 
     &.small {
