Feat (LightTheme): Initial commit

--- a/src/app/globals.scss
+++ b/src/app/globals.scss
@@ -27,4 +27,8 @@ main {
     margin: 2rem auto;
     display: flex;
     flex-direction: column;
+
+    @media screen and (max-width: 768px) {
+        margin: 1rem auto;
+    }
 }
