--- a/src/components/Box/Box.module.scss
+++ b/src/components/Box/Box.module.scss
@@ -9,11 +9,18 @@
     padding: 1.5rem;
     border-radius: 1.5rem;
     background-color: color-mix(in srgb, $color-grey-900 50%, $color-black 50%);
+    transition: background .25s, color .25s;
 
     &.bg-img {
         background-position: center 25%;
         background-size: cover;
         max-width: 100%;
         min-height: 1fr;
+    }
+
+    &.light {
+        background-color: $color-grey-50;
+        color: $color-black;
+        box-shadow: 0 0 .25rem $color-grey-400;
     }
 }
