Fix (Button): Removed inherit outline for filled Button

--- a/src/components/Button/Button.module.scss
+++ b/src/components/Button/Button.module.scss
@@ -95,6 +95,8 @@
     }
 
     &.fill {
+        outline: none !important;
+
         &.default {
             background-color: $color-grey-900;
             color: $color-white;
